rollback commit 1ac12cd to prevent collapse of staffing rollovers to left

--- a/css/altres.css
+++ b/css/altres.css
@@ -342,7 +342,6 @@ body.not-front #primary-links a, body.not-front #primary-links a:link, body.not-
 	top: 0px;
 	padding: 0;
 	float: left;
-	margin-left: -1px;
 }
 
 
